Link to blog on index.

--- a/html/index.html
+++ b/html/index.html
@@ -51,7 +51,7 @@
 </div>
 
 <p>Welcome to <em>Game Programming Patterns</em>, a book on architectural patterns in game code. If you ever struggle with the complexity of your game's codebase, this book will help. The complete text (that I've written so far) is available online for free, and will always be. Follow the table of contents below to start your journey!</p>
-<p>If you want to get in touch, you can email me at <tt>bob</tt> at this site. I must warn you that I'm terrible at replying to email. I have little free time so I try to focus on writing the book, but I do read and appreciate every email I get.</p>
+<p>If you want to get in touch, you can email me at <tt>bob</tt> at this site. I must warn you that I'm terrible at replying to email. I have little free time so I try to focus on writing the book, but I do read and appreciate every email I get. If you want to read more of my writing on other subjects, check out <a href="http://journal.stuffwithstuff.com/">my blog</a>.</p>
 <h2>Table of Contents</h2>
 <ul>
   <li>Getting Started
