"Structure of Arrays" -> "Data Locality".

--- a/html/component.html
+++ b/html/component.html
@@ -275,10 +275,10 @@ pointer following may lead to poor performance.</p>
 <aside name="perf">
 
 <p>There&#x2019;s a flip side to this coin. The Component pattern can often
-<em>improve</em> performance and cache coherence. Components are a prime
-candidate for use in the <a class="pattern"
-href="structure-of-arrays.html">Structure of Arrays</a> pattern, which
-addresses a performance problem caused by monolithic objects.</p>
+<em>improve</em> performance and cache coherence. Components make it
+easier to use the <a class="pattern" href="data-locality.html">
+Data Locality</a> pattern to organize your data in the order
+that the CPU wants it.</p>
 </aside>
 
 <h2><a href="#sample-code" name="sample-code">Sample Code</a></h2>
@@ -1000,12 +1000,12 @@ communication paths if you need them.</p>
 <ul>
 <li>
 <p>This pattern goes hand in hand with the <a class="pattern"
-    href="structure-of-arrays">Structure of Arrays</a> pattern.
+    href="data-locality.html">Data Locality</a> pattern.
     Components split a monolithic object into separate smaller
     objects for each domain being used. If you get all of the
     components of the same type and put them in an array, now you&#x2019;ve
-    got them laid out in memory just the way the Structure of Arrays
-    pattern needs to improve your game&#x2019;s performance.</p>
+    got them laid out in memory in the most efficient way for your
+    CPU to read them.</p>
 <p>This is a rare hat trick in architecture: your code is both more
 maintainable <em>and</em> faster.</p>
 </li>
