--- a/html/update-method.html
+++ b/html/update-method.html
@@ -480,7 +480,7 @@
 <p>This pattern is part of a trinity with <a href="game-loop.html" class="pattern">Game Loop</a> and <a href="component.html" class="pattern">Component</a> that often form the nucleus of a game engine.</p>
 </li>
 <li>
-<p>When you start caring about the cache performance of updating a bunch of entities or components in a loop each frame, the <a href="structure-of-arrays.html" class="pattern">Structure of Arrays</a> pattern can help make that faster.</p>
+<p>When you start caring about the cache performance of updating a bunch of entities or components in a loop each frame, the <a href="data-locality.html" class="pattern">Data Locality</a> pattern can help make that faster.</p>
 </li>
 <li>
 <p>Microsoft&#x2019;s XNA platform uses this pattern both in the <a href="http://msdn.microsoft.com/en-us/library/microsoft.xna.framework.game.update.aspx"><code>Game</code></a> and <a href="http://msdn.microsoft.com/en-us/library/microsoft.xna.framework.gamecomponent.update.aspx"><code>GameComponent</code></a> classes.</p>
