--- a/html/data-locality.html
+++ b/html/data-locality.html
@@ -111,37 +111,33 @@ a bunch of boxes that are next to it. He doesn&#x2019;t know if you want those (
 <p>He loads the whole pallet and brings it to you. Ignoring issues of workplace safety, he drives the forklift right in and drops the pallet in the corner of your office.</p>
 <p>When you need a new box, now, the first thing you do is see if it&#x2019;s already on the pallet in your office. If it is, great! It just takes you a second to grab it and you&#x2019;re back to crunching numbers. If a pallet holds fifty boxes and you got lucky and all of the boxes you need happen to be on it, you can churn through fifty times more work than you could before.</p>
 <p>But, if you need a box that&#x2019;s <em>not</em> on the pallet, you&#x2019;re back to square one. You can only fit one pallet in your office, so your warehouse friend will have to come take that one back and then bring you entirely new one. Tomorrow.</p>
-<h2><a href="#cpu-cache" name="cpu-cache">cpu cache</a></h2>
-<p>very close analogy for how cpus work today. (why would it be in chapter if
-wasn&#x2019;t good analogy?)</p>
-<p>warehouse is main memory. fetching data from it is slooooow.</p>
-<p>box is amount of data that fits in registers</p>
-<p>but cpus now have a cache. small chunk of mem faster to access than ram.
-fast because on chip. literally in area of computers where physics comes
-into play. faster because electrons have less distance to travel.</p>
-<p>in analogy, cache is pallet of boxes you can fit in your office</p>
-<p>when cpu requests byte from main memory, it automatically grabs a chunk of
-contiguous memory, usually 64 or 128 bytes. called "cache line". pulls that
-whole line of data into cache at once.</p>
-<p>if you read next byte of data after one you just requested, its already in
-cache (on pallet in office) and its superfast.</p>
-<p>actually multiple levels of cache. each bigger and slower and then next: l1,
-l2, etc. different chips different.</p>
-<p>when chip needs byte, if it&#x2019;s in cache, gets it fast. called
-cache hit.</p>
-<p>if not already in cache, have to go to ram (or next cache level). called
-cache miss.</p>
-<p>cache misses are the enemy.</p>
-<p>imagine you&#x2019;re trying to optimize some code like this:</p>
-<p _="
-" actors_i_-_update_="actors[i]-&gt;update();
-" doAbsolutelyNothingFor500Cycles_="doAbsolutelyNothingFor500Cycles();
-">for (int i = 0; i &lt; NUM_ACTORS; i++)</p>
-<p>what&#x2019;s the first thing you&#x2019;re going to do? right. that fn call is a cache
-miss.</p>
-<p>speed difference when reading from cache compared to memory is huge. think
-100x or more. has huge impact on app perf.</p>
-<p>[asked game dev friend what he knows about cache perf. said he spent most of past two years doing nothing but optimizing games for cache usage.]</p>
+<h2><a href="#cpu-cache" name="cpu-cache">CPU Cache</a></h2>
+<p>That&#x2019;s a pretty close <span name="analogy">analogy</span> for how CPUs in modern computers work. In case it isn&#x2019;t obvious, you play the role of the CPU. Your desk is the CPU&#x2019;s registers, and the box of papers is the data you can fit in them. The warehouse is your machine&#x2019;s RAM, and that annoying warehouse guy is the bus that pulls data from main memory into registers.</p>
+<aside name="analogy">
+
+<p>Why would it be in this chapter if it wasn&#x2019;t a good analogy?</p>
+</aside>
+
+<p>If I were writing this chapter thirty years ago, the analogy would stop there. But as chips got faster and RAM&hellip; didn&#x2019;t&hellip; the hardware guys started looking for solutions. What they came up with was <em>CPU caching</em>. Modern chips have a <span name="caches">little chunk</span> of memory right inside the chip. It&#x2019;s small because it has to fit in the chip. The CPU can pull data from this much faster than it can main memory in part because it&#x2019;s physically closer to the registers. The electrons have a shorter distance to travel.</p>
+<aside name="caches">
+
+<p>Modern hardware actually has multiple levels of caching, which is what they mean when you hear "L1", "L2", "L3", etc. Each level is larger but slower than the previous. For this chapter, we won&#x2019;t worry about the fact that memory is actually a hierarchy, but it&#x2019;s important to know.</p>
+</aside>
+
+<p>This little chunk of memory is called a <em>cache</em> (in particular, the chunk on the chip is your <em>L1 cache</em>) and in my belabored analogy, its part was played by the pallet of boxes. Whenever your chip reads a byte of data from RAM, it automatically grabs the following chunk of contiguous memory&thinsp;&mdash;&thinsp;usually around 64 to 128 bytes&thinsp;&mdash;&thinsp;too and puts it all in the cache. This strip of contiguous memory is called a <em>cache line</em>.</p>
+<p>If the next byte of data you need happens to be in that chunk, the CPU reads it straight from the cache, which is <em>much</em> faster than hitting RAM. When it looks for a bit of data and finds it, that&#x2019;s called a <em>cache hit</em>. If it can&#x2019;t find it in the cache and has to go to main memory, that&#x2019;s a <em>cache miss</em>.</p>
+<p>There&#x2019;s one important detail I glossed over in the analogy. In the accountant&#x2019;s office, there was only room for one pallet, or one cache line. In a real cache, it has room for a number of cache lines. It&#x2019;s a relatively smaller, fixed number, but it&#x2019;s more than <em>one</em>. The details about how those work is unfortunately out of scope here, but Google "cache associativity" if you want to feed your brain.</p>
+<p>So, whenever the CPU needs some data, it looks to see if a cache line containing it is already in the cache. When that fails, and a cache miss occurs, the CPU <em>stalls</em>: it can&#x2019;t process the next instruction because needs data. So it just sits there, spinning its cycles all bored and lonely, for a few hundred cycles until the fetch completes.</p>
+<p>Our mission for the rest of this chapter is to figure out how to minimize that happening. Imagine you&#x2019;re trying to optimize some performance critical piece of game code and it looks like this:</p>
+<div class="codehilite"><pre><span class="k">for</span> <span class="p">(</span><span class="kt">int</span> <span class="n">i</span> <span class="o">=</span> <span class="mi">0</span><span class="p">;</span> <span class="n">i</span> <span class="o">&lt;</span> <span class="n">NUM_ACTORS</span><span class="p">;</span> <span class="n">i</span><span class="o">++</span><span class="p">)</span>
+<span class="p">{</span>
+  <span class="n">doAbsolutelyNothingFor500Cycles</span><span class="p">();</span>
+  <span class="n">actors</span><span class="p">[</span><span class="n">i</span><span class="p">]</span><span class="o">-&gt;</span><span class="n">update</span><span class="p">();</span>
+<span class="p">}</span>
+</pre></div>
+
+
+<p>What&#x2019;s the first change you&#x2019;re going to make to that code? Right. Take out that pointless function, expensive call. That functional call is equivalent to the performance hit of a cache miss. Every time you bounce to main memory, it&#x2019;s like you put a <code>sleep()</code> call in your code.</p>
 <h2><a href="#memory-=-perf" name="memory-=-perf">memory = perf?</a></h2>
 <p>heard about importance of cache before writing this, but no first-hand
 experience. (most my background higher level).</p>
